# translator-py

./: pyproject.toml
src/tests/: test_timestamps_remover.py
src/tests/timestamps_remover/: test_remove_timestamps_from_file.py  test_remove_timestamps_from_str.py
src/translator/: __init__.py  main.py  timestamps_remover.py
